<resources>
    <string name="app_name">Musify</string>
    <string name="go_back_button_content_descriptor">Botón para ir hacia atrás.</string>

    <string name="welcome_to_musify">¡Bienvenido a Musify!</string>
    <string name="welcome_to_musify_description">Tu música, donde quieras y cuando quieras.</string>

    <string name="login">Iniciar sesión</string>
    <string name="login_welcome_back">¡Nos alegra verte de nuevo!</string>
    <string name="type_your_username">Escribe tu nombre de usuario</string>
    <string name="type_your_password">Escribe tu contraseña</string>
    <string name="error_username_empty">El nombre de usuario no puede estar vacío</string>
    <string name="error_password_empty">La contraseña no puede estar vacía</string>

    <string name="signup">Registrarse</string>
    <string name="signup_in_musify">¡Hola! Regístrate y empieza a usar la app.</string>
    <string name="repeat_password">Repite tu contraseña</string>
    <string name="error_passwords_not_match">Las contraseñas no coinciden</string>
    <string name="type_your_email">Escribe tu correo electrónico</string>
    <string name="error_email_empty">El correo no puede estar vacío</string>
    <string name="error_email_invalid">El correo no es válido</string>

    <string name="error_invalid_credentials_or_username_not_found">Usuario no encontrado o contraseña incorrecta.</string>
    <string name="error_internal_server_error">Ha ocurrido un error en el servidor.</string>
    <string name="error_username_already_exists">El nombre de usuario ya existe.</string>

    <string name="library">Biblioteca</string>
    <string name="search">Buscar</string>
    <string name="user">Usuario</string>

    <string name="your_playlists">Tus listas de reproducción</string>
    <string name="listen_again">Escuchar otra vez</string>

    <string name="track">Canción</string>
    <string name="tracks">Canciones</string>
    <string name="users">Usuarios</string>

    <string name="user_profile_picture">Foto de perfil de usuario</string>
    <string name="user_configuration">Configuración del usuario</string>
    <string name="add_track">Añadir canción</string>

    <string name="item_playlist_content_descriptor">Imagen de la lista de reproducción</string>
    <string name="item_track_content_descriptor">Imagen de una canción</string>
    <string name="search_image_content_descriptor">Imagen de un usuario o canción</string>
    <string name="library_add_playlist">Añadir una nueva lista de reproducción</string>
    <string name="a_adir_a_playlist">Añadir a playlist</string>
    <string name="mas_opciones">Mas opciones</string>
    <string name="eliminar_de_la_playlist">Eliminar de la playlist</string>
    <string name="view_statistics">Ver informes</string>
    <string name="co2_equivalent">kg CO₂ eq</string>

    <string-array name="sort_options">
        <item>Orden personalizado</item>
        <item>Título</item>
        <item>Artista</item>
        <item>Fecha de añadido</item>
        <item>Duración</item>
    </string-array>
</resources>